# rutube_parser_bot__test_task

./: .env.dist  .pylintrc  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
docker/app/: Dockerfile  start.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0631bded7d36_remov_single_field_unique_indexes.py  51a9971ea593_initial_migration.py  611f33673724_update_channel_model.py  7d6fc4b5ffa9_add_unique_indexes.py  8ed154be1d54_update_user_model.py
src/app/: app.py
src/bot/: bot.py
src/bot/handlers/: callbacks.py  commands.py  messages.py  setup.py
src/bot/keyboards/: callback_data.py  inline.py
src/config/: __init__.py  db.py  logger.py  settings.py
src/dto/: channel.py  video.py
src/models/: channel.py  user.py  video.py
src/repository/: channel_repository.py  manager.py  user_repository.py  video_repository.py
src/service/: data_saver.py  parser.py
src/tasks/: celery_tasks.py
