[tool.poetry]
name = "rutube-parser-bot-test-task"
version = "0.1.0"
description = ""
authors = ["Elena Vagner <develop.vagner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pylint = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
